# cpp_lib_starter

./: .clang-format  .tmplr.yml  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
.github/workflows/: 0_setup_workflow.yaml  1_tests_workflow.yaml  ci_ubuntu_macos.yml  ci_windows.yml  documentation.yaml  documentation.yml  init.yaml  static.yml  test.yaml  tests.yaml  ubuntu.yaml  windows.yaml
benchmarks/: CMakeLists.txt  benchmark.cpp  run_benchmarks.py
benchmarks/scripts/: continuous_benchmarking.py
cmake/: cache.cmake  find_cpm.cmake  get_tcm.cmake  git_version.cmake  misc.cmake  prevent_in_source_build.cmake  project_is_top_level.cmake  set_version_from_git.cmake  support_computed_gotos.cmake  target_set_compile_warnings.cmake  tools.cmake  utility.cmake  version_header.cmake
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  benchmarks.md  conf.py  update_code_blocks.cmake
docs/cmake/: find_plotly.cmake
docs/config/: Doxyfile.in  conf.py
docs/doxygen/: Doxyfile.in  DoxygenLayout.xml  conf.py  custom.css  footer.html  header.html
docs/images/: my_plot.html
docs/pages/: about.dox  about.md  benchmarks.md  example.md  index.md  my_plot.html  reference.md
docs/resources/: custom.css  header.html
include/my_lib/: my_lib_header.hpp
include/my_project/: lib.hpp
include/{{tmplr.repo_name}}/: {{tmplr.repo_name}}.hpp
src/: lib.cpp  my_lib_source.cpp
template/: README.md
template/.github/workflows/: ubuntu.yaml
template/cpp/: CMakeLists.txt  main.cpp  main.hpp
template/cpp/benchmarks/: CMakeLists.txt  benchmark.cpp
template/cpp/benchmarks/scripts/: continuous_benchmarking.py
template/cpp/cmake/: include_code_block.cmake  utility.cmake  version_header.cmake
template/cpp/examples/: CMakeLists.txt  getting_started.cpp
template/cpp/examples/00_GettingStarted/: main.cpp
template/cpp/include/: core.hpp
template/cpp/src/: core.cpp  version.hpp.in
template/cpp/tests/: CMakeLists.txt  core.cpp  main.cpp
template/static_library/: CMakeLists.txt  main.cpp  main.hpp
tests/: CMakeLists.txt  lib.cpp  my_lib_header.cpp  utils.hpp
